--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2745,11 +2745,13 @@ img {
   top: -4px;
   bottom: -4px;
   border: 1px solid #FFF8D9;
+  border-radius: 10px;
 }
 .benefits-preview img {
   display: block;
   width: 72px;
   height: 72px;
+  border-radius: 10px;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
@@ -2775,6 +2777,7 @@ img {
 .benefits-arrow {
   width: 72px;
   height: 72px;
+  border-radius: 10px;
   background-color: #FFF8D9;
   display: inline-block;
   vertical-align: middle;
@@ -3050,6 +3053,7 @@ img {
   padding: 24px;
   background: rgba(35, 55, 43, 0.1);
   border: 1px solid #7E9185;
+  border-radius: 10px;
   -webkit-backdrop-filter: blur(7.5px);
           backdrop-filter: blur(7.5px);
   width: unset;
