--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2607,26 +2607,26 @@
 
 .screen-contest-form {
   position: relative;
-  height: 100vh;
+  // height: 100vh;
   background-image: url(../images/form-mask-bg.svg), url(../images/form-contest-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-color: #538c57;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   color: $bgc;
   display: flex;
   align-items: center;
-  // min-height: 100vh;
+  min-height: 100vh;
   @media (max-width: 1366px) {
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
-  @media (max-width: 1280px) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  // @media (max-width: 1280px) {
+  //   padding-top: 60px;
+  //   padding-bottom: 60px;
+  // }
 
   @media (max-width: 1024px) {
     min-height: unset;
