--- a/src/css/style.css
+++ b/src/css/style.css
@@ -816,6 +816,24 @@ img {
   text-align: center;
   line-height: 61px;
 }
+@media (max-width: 1680px) {
+  .pagination-dots {
+    width: 50px;
+    height: 50px;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 50px;
+  }
+}
+@media (max-width: 1140px) {
+  .pagination-dots {
+    width: 42px;
+    height: 42px;
+    font-size: 14px;
+    font-size: 0.875rem;
+    line-height: 42px;
+  }
+}
 
 .pagination__arrows {
   display: -webkit-box;
@@ -4880,8 +4898,8 @@ img {
 }
 @media (max-width: 480px) {
   .screen-plans-cards .screen-plans-item {
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 18px;
+    padding-left: 18px;
     padding-top: 20px;
     padding-bottom: 20px;
   }
@@ -5098,7 +5116,7 @@ img {
         -ms-flex-order: -1;
             order: -1;
     width: 100%;
-    margin-bottom: 24px;
+    margin-bottom: 38px;
   }
   .screen-plans-cards .screen-plans-pagination__create .ui-btn {
     width: 100%;
