--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -318,6 +318,18 @@ img {
 	font-weight: 700;
 	text-align: center;
 	line-height: 61px;	
+	@media (max-width: 1680px) {
+		width: 50px;
+		height: 50px;
+		@include fz(16);
+		line-height: 50px;
+	}
+	@media (max-width: 1140px) {
+		width: 42px;
+		height: 42px;
+		@include fz(14);
+		line-height: 42px;
+	}
 }
 
 .pagination__arrows {
